--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ li{list-style: none;}
   /*Colores de Google*/
   --color-blue: #176bef;
   --color-yellow: #f7b529;
-  --color-green: #179c52;
+  --color-green: #454e5243;
   --color-red: #ff3e30;
 
   /*Otros colores*/
@@ -35,7 +35,7 @@ p, li, a{
 /*Fin de los estilos principales*/
 
 body{
-    background: var(--color-green);
+    background: var(--color-gray);
     min-width: 100vh;
     min-height: 100vh;
 }
@@ -62,9 +62,9 @@ form{
     box-shadow: 2px 5px 10px rgba(10, 10, 10, .5);
 }
 label{
-    margin-top: 5px;
+    margin-top: 10px;
     width: 80%;
-    color: var(--color-blue);
+    color: #2d3436;
 }
 .message{
     width: 100%;
@@ -84,13 +84,13 @@ label{
     display: flex;
     flex-flow: wrap column;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
     background: var(--color-white);
 }
 input{
     width: 80%;
-    padding: 10px;
+    padding: 15px;
 }
 .boton{
     font-weight: 700;
@@ -101,6 +101,11 @@ input{
     margin: auto;
     border: none;
 }
+
+.boton input[type="submit"]:focus {
+	background: #094;
+}
+
 form ul{
     width: 100%;
 }
@@ -141,3 +146,72 @@ tr td{
 .centerText{
     text-align: center;
 }
+
+nav{
+    background-color: #ffffff;
+    color: #176bef;
+}
+
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+nav ul li a{
+    color: #176bef;
+    text-decoration: none;
+    display: block;
+    padding: 10px 15px;
+}
+
+
+.titulo_ingreso{
+    text-align: center;
+    color: #2d3436;
+    font-size: 30px;
+    
+}
+.editar{
+    background-color: #176bef;
+    border-radius: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    color: #bdbdbd;
+    padding: 5px;
+    margin: 5px;
+    
+}
+
+.editar_letra{
+    color: antiquewhite;
+
+}
+
+.estados{
+    background-color: #ffffff;
+}
+
+.titulo_estados{
+    background-color: var(--color-blue);
+    color: #ffffff;
+}
+
+img{
+    width: 100%;
+}
+.content_home{
+    display: flex;
+    flex-flow: row;
+    align-items: flex-start;
+    justify-content: center;
+    height: 85vh;
+}
+
+
+
+
+
+
